Syncing changes from private repository

--- a/Chartboost.CSharp.Threading.Unity.nuspec
+++ b/Chartboost.CSharp.Threading.Unity.nuspec
@@ -1,8 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <package>
   <metadata>
     <id>Chartboost.CSharp.Threading.Unity</id>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <title>Chartboost Threading Utilities for Unity</title>
     <description>Reusable Threading Utilities for Chartboost's Unity Projects</description>
     <authors>Chartboost</authors>
@@ -13,7 +13,8 @@
     <tags>Chartboost, Ads, Mediation, Unity, cs</tags>
     <repository type="git" url="https://github.com/ChartBoost/chartboost-unity-threading"/>
     <dependencies>
-      <dependency id="Chartboost.CSharp.Utilities.Unity" version="1.0.0" />
+      <dependency id="Chartboost.CSharp.Utilities.Unity" version="1.0.1" />
+      <dependency id="Chartboost.CSharp.Logging.Unity" version="1.0.0" />
     </dependencies>
   </metadata>
 </package>
