--- a/Tests/Runtime/Chartboost.Threading.Tests.Runtime.asmdef
+++ b/Tests/Runtime/Chartboost.Threading.Tests.Runtime.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "Chartboost.Threading"
+        "Chartboost.Threading",
+        "Chartboost.Logging"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
