--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "com.chartboost.unity.threading",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "displayName": "Chartboost Threading",
   "description": "Reusable Threading Utilities for Chartboost's Unity Projects",
-  "unity": "2020.3",
-  "unityRelease": "27f1",
+  "unity": "2022.3",
   "licensesUrl": "https://answers.chartboost.com/child_article/legal",
   "keywords": [],
   "author": {
@@ -14,6 +13,7 @@
   },
   "hideInEditor": false,
   "dependencies": {
-    "com.chartboost.unity.utilities": "1.0.0"
+    "com.chartboost.unity.utilities": "1.0.1",
+    "com.chartboost.unity.logging": "1.0.0"
   }
 }
